--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,14 @@
 {% autoescape true %}
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     </head>
     <body>
-        {% block content %}{% endblock %}
+        {% include 'navbar.html' %}
+        <div class="container">
+            {% block content %}{% endblock %}
+        </div>
     </body>
 </html>
 {% endautoescape %}
