Created base response page

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="#">Dashboard</a></li>
                 <li><a href="#">Create Quiz</a></li>
-                <li><a href="#">Responses</a></li>
+                <li><a href="/respond">Responses</a></li>
             </ul>
         </div>
     </div>
