--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,11 +1,20 @@
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nb">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Clicker</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="nb">
             <ul class="nav navbar-nav">
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Create Quiz</a></li>
-                <li><a href="/respond">Responses</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/create">Create Quiz</a></li>
+                <li><a href="/respond">Respond</a></li>
             </ul>
         </div>
     </div>
