--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
         <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
+        {% block head %}{% endblock %}
     </head>
     <body>
         {% include 'navbar.html' %}
