--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,6 +15,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/create">Create Quiz</a></li>
                 <li><a href="/respond">Respond</a></li>
+                <li><a href="/quizzes">View Quizzes</a></li>
             </ul>
         </div>
     </div>
