--- a/templates/respond.html
+++ b/templates/respond.html
@@ -17,19 +17,19 @@
             <hr>
             <div class="btn-group-vertical" data-toggle="buttons">
             	<label class="btn btn-primary" for="a1">
-                    <input id="a1" type="radio" name="answer" value="0" autocomplete="off"> A
+                    <input id="a1" type="radio" name="answer" value="1" autocomplete="off"> A
                 </label>
             	<label class="btn btn-primary" for="a2">
-                    <input id="a2" type="radio" name="answer" value="1" autocomplete="off"> B
+                    <input id="a2" type="radio" name="answer" value="2" autocomplete="off"> B
                 </label>
             	<label class="btn btn-primary" for="a3">
-                    <input id="a3" type="radio" name="answer" value="2" autocomplete="off"> C
+                    <input id="a3" type="radio" name="answer" value="3" autocomplete="off"> C
                 </label>
             	<label class="btn btn-primary" for="a4">
-                    <input id="a4" type="radio" name="answer" value="3" autocomplete="off"> D
+                    <input id="a4" type="radio" name="answer" value="4" autocomplete="off"> D
                 </label>
             </div>
-            <button class="btn btn-default btn-block">Submit</button>
+            <button class="btn btn-success btn-block">Submit</button>
         </form>
     </div>
     <div class="col-md-4">
