--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Clicker</a>
+            <span class="navbar-brand">Clicker</span>
         </div>
 
         <div class="collapse navbar-collapse" id="nb">
