--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-{% autoescape true %}
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>{% block title %}My Site{% endblock %}</title>
+
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+        {% block style %}{% endblock %}
+
         <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
-        {% block head %}{% endblock %}
+        {% block script %}{% endblock %}
     </head>
     <body>
         {% include 'navbar.html' %}
@@ -15,4 +19,3 @@
         </div>
     </body>
 </html>
-{% endautoescape %}
