--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% block title %}Index{% endblock %}
+
 {% block content %}
-<h1>Hello World!</h1>
+    <h1>Hello World!</h1>
 {% endblock %}
