Changed 'Questions' to 'Answers'

--- a/templates/create.html
+++ b/templates/create.html
@@ -24,20 +24,20 @@
                 <input name="element_1" id="element_1" class="form-control" type="text">
                 <hr>
                 <div class="form-group">
-                    <label for="element_2">Question 1</label>
-                    <input type="text" class="form-control" id="element_2" placeholder="Question 1">
+                    <label for="element_2">Answer 1</label>
+                    <input type="text" class="form-control" id="element_2" placeholder="Answer 1">
                 </div>
                 <div class="form-group">
-                    <label for="element_3">Question 2</label>
-                    <input type="text" class="form-control" id="element_3" placeholder="Question 2">
+                    <label for="element_3">Answer 2</label>
+                    <input type="text" class="form-control" id="element_3" placeholder="Answer 2">
                 </div>
                 <div class="form-group">
-                    <label for="element_4">Question 3</label>
-                    <input type="text" class="form-control" id="element_4" placeholder="Question 3">
+                    <label for="element_4">Answer 3</label>
+                    <input type="text" class="form-control" id="element_4" placeholder="Answer 3">
                 </div>
                 <div class="form-group">
-                    <label for="element_5">Question 4</label>
-                    <input type="text" class="form-control" id="element_5" placeholder="Question 4">
+                    <label for="element_5">Answer 4</label>
+                    <input type="text" class="form-control" id="element_5" placeholder="Answer 4">
                 </div>
 
                 <h4>Correct Answer</h4>
