--- a/templates/create.html
+++ b/templates/create.html
@@ -18,49 +18,70 @@
     <h1>Create a Quiz</h1>
     <hr>
     <div class="row">
-        <div class="col-md-4">
-            <form method="get" action="/quizzes" id="response-form">
-                <label for="element_1">Enter Question</label>
-                <input name="element_1" id="element_1" class="form-control" type="text">
-                <hr>
-                <div class="form-group">
-                    <label for="element_2">Answer 1</label>
-                    <input type="text" class="form-control" id="element_2" placeholder="Answer 1">
-                </div>
-                <div class="form-group">
-                    <label for="element_3">Answer 2</label>
-                    <input type="text" class="form-control" id="element_3" placeholder="Answer 2">
-                </div>
-                <div class="form-group">
-                    <label for="element_4">Answer 3</label>
-                    <input type="text" class="form-control" id="element_4" placeholder="Answer 3">
-                </div>
-                <div class="form-group">
-                    <label for="element_5">Answer 4</label>
-                    <input type="text" class="form-control" id="element_5" placeholder="Answer 4">
-                </div>
-
-                <h4>Correct Answer</h4>
-                <div id="ca" class="btn-group btn-group-justified" data-toggle="buttons">
-                    <label class="btn btn-primary" for="a1">
-                        <input id="a1" type="radio" name="answer" value="1" autocomplete="off"> A
-                    </label>
-                    <label class="btn btn-primary" for="a2">
-                        <input id="a2" type="radio" name="answer" value="2" autocomplete="off"> B
-                    </label>
-                    <label class="btn btn-primary" for="a3">
-                        <input id="a3" type="radio" name="answer" value="3" autocomplete="off"> C
-                    </label>
-                    <label class="btn btn-primary" for="a4">
-                        <input id="a4" type="radio" name="answer" value="4" autocomplete="off"> D
-                    </label>
-                </div>
-                <button class="btn btn-success" onclick="return getFormData();">Add Question</button>
-                <button class="btn btn-primary" onclick="return toJSON();">Submit Quiz</button>
-            </form>
+        <div id="quiz-name-view">
+            <div  class="col-md-4 col-md-offset-4">
+                <h3>Quiz Name</h3>
+                <input id="quiz-name" type="text" class="form-control">
+                <br>
+                <button class="btn btn-success" onclick="return create();">
+                    Create Questions
+                </button>
+            </div>
         </div>
-        <div class="col-md-4">
-            <h4>Current User: {{username}}</h4>
+        <div id="quiz-questions-view" style="display:none;">
+            <div  class="col-md-4">
+                <form method="get" action="/quizzes" id="response-form">
+                    <label for="question">Enter Question</label>
+                    <input name="question" id="question" class="form-control" type="text">
+                    <hr>
+                    <div class="form-group">
+                        <label for="a1">Answer 1</label>
+                        <input type="text" class="form-control" id="a1" placeholder="Answer 1">
+                    </div>
+                    <div class="form-group">
+                        <label for="a2">Answer 2</label>
+                        <input type="text" class="form-control" id="a2" placeholder="Answer 2">
+                    </div>
+                    <div class="form-group">
+                        <label for="a3">Answer 3</label>
+                        <input type="text" class="form-control" id="a3" placeholder="Answer 3">
+                    </div>
+                    <div class="form-group">
+                        <label for="a4">Answer 4</label>
+                        <input type="text" class="form-control" id="a4" placeholder="Answer 4">
+                    </div>
+
+                    <h4>Correct Answer</h4>
+                    <div id="ca" class="btn-group btn-group-justified" data-toggle="buttons">
+                        <label class="btn btn-primary" for="a1">
+                            <input id="ca1" type="radio" name="answer" value="1" autocomplete="off"> A
+                        </label>
+                        <label class="btn btn-primary" for="a2">
+                            <input id="ca2" type="radio" name="answer" value="2" autocomplete="off"> B
+                        </label>
+                        <label class="btn btn-primary" for="a3">
+                            <input id="ca3" type="radio" name="answer" value="3" autocomplete="off"> C
+                        </label>
+                        <label class="btn btn-primary" for="a4">
+                            <input id="ca4" type="radio" name="answer" value="4" autocomplete="off"> D
+                        </label>
+                    </div>
+                    <button class="btn btn-success" onclick="return getFormData();">
+                        Add Question
+                    </button>
+                    <button class="btn btn-primary" onclick="return toJSON();">
+                        Submit Quiz
+                    </button>
+                </form>
+            </div>
+            <div class="col-md-4">
+                <h3 id="quiz-name-header"></h3>
+                <ul class="list-group" id="question-list">
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h4>Current User: {{username}}</h4>
+            </div>
         </div>
     </div>
 {% endblock %}
