--- a/templates/create.html
+++ b/templates/create.html
@@ -76,8 +76,13 @@
             </div>
             <div class="col-md-4">
                 <h3 id="quiz-name-header"></h3>
-                <ul class="list-group" id="question-list">
-                </ul>
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        Questions
+                    </div>
+                    <ul class="list-group" id="question-list">
+                    </ul>
+                </div>
             </div>
             <div class="col-md-4">
                 <h4>Current User: {{username}}</h4>
