--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -16,6 +16,14 @@
                 <li><a href="/create">Create Quiz</a></li>
                 <li><a href="/respond">Respond</a></li>
                 <li><a href="/quizzes">View Quizzes</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if user %}
+                <li><a href="/user">Welcome, {{ user.nickname() }}</a></li>
+                <li><a href="{{ logout_url }}">Logout</a></li>
+                {% else %}
+                <li><a href="{{ login_url }}">Login</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
