--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,15 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Index{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block content %}
     <h1>Dashboard</h1>
     <hr>
     <div class="col-md-4 col-md-offset-4">
-        {% if user %}
         <h3>Welcome {{ user.nickname() }}</h3>
-        {% else %}
-
-        {% endif %}
     </div>
 {% endblock %}
