--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,24 +7,27 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span class="navbar-brand">Clicker</span>
+            <span class="navbar-brand">CLICKER</span>
         </div>
 
         <div class="collapse navbar-collapse" id="nb">
+            {% if user %}
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="/create">Create Quiz</a></li>
                 <li><a href="/respond">Respond</a></li>
                 <li><a href="/quizzes">View Quizzes</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                {% if user %}
                 <li><a href="/user">Welcome, {{ user.nickname() }}</a></li>
                 <li><a href="{{ logout_url }}">Logout</a></li>
-                {% else %}
-                <li><a href="{{ login_url }}">Login</a></li>
-                {% endif %}
             </ul>
+
+            {% else %}
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="{{ login_url }}">Login</a></li>
+            </ul>
+            {% endif %}
         </div>
     </div>
 </nav>
